updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
+      <h1>Where I'm from</h1>
+      <p>Orlando, FL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Movies, Conventions, Travel</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Makin mad $$$</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Union Park</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Developers, Developers, Developers</p>
     </section>
 
     <footer id="footer">
